[package]
name = "dungen_minion_rooms_abstract"
version = "0.2.2"
authors = ["MouseProducedGames <largemouse@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Abstract room support for dungen_minion."
homepage = "https://github.com/MouseProducedGames/dungen_minion_rooms_abstract"
repository = "https://github.com/MouseProducedGames/dungen_minion_rooms_abstract"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dungen_minion_geometry = "0.2.3"
lazy_static = "1.4.0"
parking_lot = "0.11.0"
